force-app/main/default/objects/vlocity_ins__AssetPartyRelationship__c/fields/vlocity_ins__IsPolicyholder__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsPolicyholder__c</fullName>
    <description>Indicates if party is the policyholder</description>
    <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__c == vlocity_ins__AssetId__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Policyholder</label>
    <type>Checkbox</type>
</CustomField>