force-app/main/default/objects/vlocity_ins__AssetPartyRelationship__c/fields/vlocity_ins__LookupKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LookupKey__c</fullName>
    <formula>vlocity_ins__InsuredPartyNumber__c + &apos;_&apos; + vlocity_ins__AssetId__r.SerialNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lookup Key</label>
    <type>Text</type>
</CustomField>