force-app/main/default/objects/vlocity_ins__AssetPartyRelationship__c/fields/vlocity_ins__PartyAccountBillingCity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PartyAccountBillingCity__c</fullName>
    <description>Billing City of Account associated with Party</description>
    <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Account Billing City</label>
    <type>Text</type>
</CustomField>