force-app/main/default/objects/vlocity_ins__AssetPartyRelationship__c/fields/vlocity_ins__PartyAccountBillingCountry__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PartyAccountBillingCountry__c</fullName>
    <description>Billing Country of Account associated with Party</description>
    <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Account Billing Country</label>
    <type>Text</type>
</CustomField>