force-app/main/default/objects/vlocity_ins__AssetPartyRelationship__c/fields/vlocity_ins__PartyAccountBillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PartyAccountBillingPostalCode__c</fullName>
    <description>Billing Postal Code of Account associated with Party</description>
    <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Account Billing Postal Code</label>
    <type>Text</type>
</CustomField>