force-app/main/default/objects/vlocity_ins__AssetPartyRelationship__c/fields/vlocity_ins__PartyAccountBillingState__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PartyAccountBillingState__c</fullName>
    <description>Billing State of Account associated with Party</description>
    <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Account Billing State</label>
    <type>Text</type>
</CustomField>