force-app/main/default/objects/vlocity_ins__AssetPartyRelationship__c/fields/vlocity_ins__PartyAccountBillingStreet__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PartyAccountBillingStreet__c</fullName>
    <description>Billing Street of Account associated with Party</description>
    <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Account Billing Street</label>
    <type>Text</type>
</CustomField>