force-app/main/default/objects/vlocity_ins__AssetPartyRelationship__c/fields/vlocity_ins__PartyAccountCalculatedAddress__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PartyAccountCalculatedAddress__c</fullName>
    <description>Calculated Address of Account associated with Party</description>
    <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.vlocity_ins__CalculatedAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Account CalculatedAddress__c</label>
    <type>Text</type>
</CustomField>