force-app/main/default/objects/vlocity_ins__AssetPartyRelationship__c/fields/vlocity_ins__PartyAccountEmail__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PartyAccountEmail__c</fullName>
    <description>Email of Account associated with Party</description>
    <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.vlocity_ins__Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Account Email</label>
    <type>Text</type>
</CustomField>