force-app/main/default/objects/vlocity_ins__AssetPartyRelationship__c/fields/vlocity_ins__PartyAccountName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PartyAccountName__c</fullName>
    <description>Name of Account associated with Party</description>
    <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Account Name</label>
    <type>Text</type>
</CustomField>