force-app/main/default/objects/vlocity_ins__AssetPartyRelationship__c/fields/vlocity_ins__PartyAccountPhone__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PartyAccountPhone__c</fullName>
    <description>Phone of Account associated with Party</description>
    <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Account Phone</label>
    <type>Text</type>
</CustomField>