force-app/main/default/objects/vlocity_ins__AssetPartyRelationship__c/fields/vlocity_ins__PartyRelationshipTypeName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PartyRelationshipTypeName__c</fullName>
    <description>The name of the relationship type, or role, for this relationship.</description>
    <formula>vlocity_ins__PartyRelationshipTypeId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Type Name</label>
    <type>Text</type>
</CustomField>