force-app/main/default/objects/vlocity_ins__AssetPartyRelationship__c/fields/vlocity_ins__RelationshipToInsured__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RelationshipToInsured__c</fullName>
    <description>Text description of the relationship of this party to the insured such as spouse or child.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship to Insured</label>
    <length>255</length>
    <type>Text</type>
</CustomField>